syntax = "proto3";

                 package creatureLootTemplate;
service CreatureLootTemplateService {
 rpc createCreatureLootTemplate (CreatureLootTemplateCreateInput) returns (CreatureLootTemplate) {}
rpc creatureLootTemplates (findManyParams) returns (stream CreatureLootTemplate) {}
rpc creatureLootTemplate (CreatureLootTemplateWhereUniqueInput) returns (CreatureLootTemplate) {}
rpc updateCreatureLootTemplate (CreatureLootTemplateUpdateInput) returns (CreatureLootTemplate) {}
rpc deleteCreatureLootTemplate (CreatureLootTemplateWhereUniqueInput) returns (CreatureLootTemplate) {} 
 }
message CreatureLootTemplateCreateInput {
int32 chance = 1;
string comment = 2;
string createdAt = 3;
int32 entry = 4;
int32 groupId = 5;
string id = 6;
int32 item = 7;
int32 lootMode = 8;
int32 maxCount = 9;
int32 minCount = 10;
int32 questRequired = 11;
int32 reference = 12;
string updatedAt = 13;
};
message CreatureLootTemplate {
int32 chance = 1;
string comment = 2;
string createdAt = 3;
int32 entry = 4;
int32 groupId = 5;
string id = 6;
int32 item = 7;
int32 lootMode = 8;
int32 maxCount = 9;
int32 minCount = 10;
int32 questRequired = 11;
int32 reference = 12;
string updatedAt = 13;
};
message CreatureLootTemplateWhereUniqueInput {
int32 chance = 1;
string comment = 2;
string createdAt = 3;
int32 entry = 4;
int32 groupId = 5;
string id = 6;
int32 item = 7;
int32 lootMode = 8;
int32 maxCount = 9;
int32 minCount = 10;
int32 questRequired = 11;
int32 reference = 12;
string updatedAt = 13;
};
message CreatureLootTemplateUpdateInput {
int32 chance = 1;
string comment = 2;
string createdAt = 3;
int32 entry = 4;
int32 groupId = 5;
string id = 6;
int32 item = 7;
int32 lootMode = 8;
int32 maxCount = 9;
int32 minCount = 10;
int32 questRequired = 11;
int32 reference = 12;
string updatedAt = 13;
};
message findManyParams {

};